--- a/MyFirstWpfApp/MainWindow.xaml
+++ b/MyFirstWpfApp/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <TextBlock HorizontalAlignment="Right" VerticalAlignment="Bottom" FontSize="10">
+            Hello, WPF!
+        </TextBlock>
     </Grid>
 </Window>
